--- a/client/stylesheets/landing.css
+++ b/client/stylesheets/landing.css
@@ -1,13 +1,9 @@
  @import url('https://fonts.googleapis.com/css2?family=Raleway');
  @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin');
 
- body {
-  overflow: auto;
-}
-
  #landing {
    width: 100vw;
-   height: 94vh;
+   height: 100vh;
    background-image: url('../assets/background.jpg');
    background-size: cover;
  }
